--- a/python기초.ipynb
+++ b/python기초.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1/Uqr2TPfSwMALXIRQbqa",
+      "authorship_tag": "ABX9TyMifIk5b2h8uLMo/fs0maHw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,10 @@
         "id": "6YUhhchZBK6X"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "1 print(\"test\")\n",
+        "2 print(\"고국원\")"
+      ]
     }
   ]
 }
